--- a/Changes.txt
+++ b/Changes.txt
@@ -7,6 +7,8 @@ b1 (2012/09/14)
 　- 画像の前に改ページがある場合に改ページ目次が出るように修正
 　- 字詰めの中に罫囲みがある場合のみ罫囲みを字詰めの高さにする
 　　（青空注記仕様の問題？ 字詰め複合や罫囲みの中に字詰めがあれば問題ない）
+　- １行に複数の画像がある場合に画像単ページ化されるよう修正
+　- 「画像設定」タブパネルで画像処理用の値を設定可能に
 a10 (2012/09/13)
 　- コメント行判定を「-」50文字以上に変更 (文字数が若干足りないものが多いため)
 　- ［＃「」に「」のルビ］の注記に対応
@@ -313,9 +315,10 @@ TODO
 Milestone1.0.6
 　- リリース済 (注記関連のバグ修正と調整のみ反映)
 Milestone1.0.7
-　- 画像関連設定画面
-　- 自動単ページ化の画像サイズと縦横比を設定
-　- リサイズ時のjpeg圧縮率等の設定
+　- 表紙左右余白設定
+　- 画像設定画面
+　　自動単ページ化の画像サイズと縦横比を設定
+　　リサイズ時のjpeg圧縮率等の設定
 　- 目次抽出設定（見出し、前後空行、数字等を含む）
 Milestone1.0.8
 　- 目次選択リスト (確認画面内)
@@ -330,7 +333,6 @@ Milestone1.0.8
 　- プログレスバー 
 
 優先度中
-　- 表紙左右余白設定
 　- 表紙編集UI改良
 　- 見出しで改ページ (ブロック注記外のみ)
 　- 指定空行とパターンで改ページ (ブロック注記外のみ)
